--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,38 +1,131 @@
 .robot-container {
+  position: fixed; /* Position the element absolutely relative to its parent */
+  top: 50%; /* Move the top edge to the vertical center */
+  left: 50vw; /* Move the left edge to the horizontal center */
+  max-height: 400px;
+  transform: translate(-50%, -50%);
 }
 
 .robot-face-shape {
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  border-color: green;
+  border-style: solid;
+  border-width: 3px;
 }
 
 .robot-eye-left {
+  position: relative;
+  top: 100px;
+  left: 30px;
+  width: 60px;
+  height: 60px;
+  background: rgba(255, 165, 0, 0.5);
 }
 
 .robot-eye-right {
+  position: relative;
+  top: 40px;
+  left: 200px;
+  width: 6.25em;
+  height: 3.75em;
+  background-image: linear-gradient(blue, purple);
 }
 
 .robot-ear-left {
+  position: relative;
+  top: -250px;
+  left: -80px;
+  border-bottom: 80px solid rgb(0, 110, 255);
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  height: 0;
+  width: 80px;
 }
 
 .robot-ear-right {
+  position: relative;
+  top: -300px;
+  left: 360px;
+  width: 100px;
+  height: 50px;
+  transform: skew(20deg);
+  background: rgb(255, 0, 170);
 }
 
 .robot-nose {
+  position: relative;
+  top: 30px;
+  left: 100px;
+  width: 23%;
+  height: 23%;
+  border-radius: 50%;
+  background-image: url("https://picsum.photos/80");
+  background-clip: border-box;
 }
 
 .robot-teeth {
+  position: relative;
+  top: 50px;
+  left: 80px;
+  width: 180px;
+  height: 80px;
+  border-radius: 50%;
+  border-color: red;
+  border-style: solid;
+  border-width: 3px;
+  background-color: rgba(0, 255, 255, 0.6);
 }
 
 .robot-tooth {
+  display: inline-block;
+}
+
+.robot-tooth-top {
+  position: relative;
+  top: 25px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 10px solid #00ff73;
+}
+
+.robot-tooth-bottom {
+  position: relative;
+  top: 40px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid hsl(83, 100%, 50%);
 }
 
 .robot-hair-style {
+  position: relative;
+  left: 25%;
+  height: 50px;
+  width: 280px;
 }
 
+.robot-hair {
+  display: inline-block;
+}
 .robot-hair-one {
+  width: 30px;
+  height: 30px;
+  background: rgba(0, 255, 34, 0.959);
 }
 
 .robot-hair-two {
+  width: 30px;
+  height: 40px;
+  background: rgba(255, 238, 0, 0.959);
 }
 
 .robot-hair-three {
+  width: 30px;
+  height: 50px;
+  background: rgb(0, 255, 200);
 }
