--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -1,8 +1,10 @@
 .legal-header {
-  background-color: #e2e2e2;
+  position: fixed;
+  width: 100%;
+  background-color: #e2e2e2ff;
   padding: 30px;
   margin-top: 60px;
-  width: 100%;
+
 }
 
 .legal-header h1 {
@@ -12,6 +14,13 @@
 }
 
 main {
+  position:absolute;
+  top: 160px;
+  bottom:50px;
+  width: 100%;
+  max-height: 350px;
+  overflow: auto;
+
 }
 
 section {
@@ -26,6 +35,8 @@ section {
 }
 
 .section-label {
+  position: sticky;
+  top: 25px;
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
@@ -53,6 +64,8 @@ section {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
   display: flex;
   align-items: center;
   width: 100%;
