--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -21,7 +21,8 @@
   left: 30px;
   width: 60px;
   height: 60px;
-  background: rgba(255, 165, 0, 0.5);
+  opacity: .5;
+  background: rgb(255, 165, 0);
 }
 
 .robot-eye-right {
@@ -75,7 +76,8 @@
   border-color: red;
   border-style: solid;
   border-width: 3px;
-  background-color: rgba(0, 255, 255, 0.6);
+  opacity: 0.6;
+  background-color: rgb(0, 255, 255);
 }
 
 .robot-tooth {
