--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -4,6 +4,7 @@
   background-color: #e2e2e2ff;
   padding: 30px;
   margin-top: 60px;
+  z-index: 10;
 
 }
 
@@ -14,20 +15,18 @@
 }
 
 main {
-  position:absolute;
+  position: relative;
   top: 160px;
-  bottom:50px;
   width: 100%;
-  max-height: 350px;
-  overflow: auto;
-
+  height: 70%;
+  bottom:auto;
 }
 
 section {
   display: flex;
   gap: 30px;
   position: relative;
-  border-bottom: 1px solid grey;
+  border_botttom: 1px solid grey;
   padding: 30px;
   max-width: 900px;
   margin: 0 auto;
@@ -36,7 +35,7 @@ section {
 
 .section-label {
   position: sticky;
-  top: 25px;
+  top: 160px;
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
@@ -61,6 +60,10 @@ section {
 
 .document-content li {
   line-height: 28px;
+}
+
+.last {
+ padding-bottom: 70px;
 }
 
 footer {
